<resources>
    <string name="app_name">Dogtopia</string>

    <string name="cam_info">Cameras are turned off for lunch time and closing hours.</string>
    <string name="cam_title">NAME</string>
	<string name="cam_hours">Hours Today: TEXT</string>

    <string name="cam_gym">Gym</string>
    <string name="cam_toybox">Toybox</string>
    <string name="cam_romper">Romper</string>
    <string name="cam_outdoor">Outside</string>

    <string name="start_welcome">Dogtopia</string>
    <string name="start_subtitle">Please Select a Location</string>
	<string name="current_room">Current Room:</string>
	<string name="stateHint">State/Providence:</string>
	<string name="locationHint">Location:</string>

	<string-array name="rooms">
		<item>Gym</item>
		<item>Romper</item>
		<item>Toybox</item>
		<item>Outside</item>
	</string-array>

    <string-array name="locations">
        <item>None</item>
        <item>Commerce</item>
        <item>Bloomfield</item>
        <item>Utica</item>
        <item>Scottsdale</item>
        <item>Coquitlam</item>
    </string-array>

	<string-array name="placeholder">
		<item>None</item>
	</string-array>
</resources>
