<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        tools:context="com.dogtopia.app.activity.MainActivity">

		<VideoView
			android:id="@+id/camera"
			android:layout_width="match_parent"
			android:layout_height="220dp"
			android:layout_marginBottom="0dp"
			android:layout_marginEnd="0dp"
			android:layout_marginStart="0dp"
			android:layout_marginTop="0dp"
			android:elevation="10dp"
			android:fadingEdge="none"
			app:layout_constraintBottom_toTopOf="@+id/camera_controls"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="2dp" />

		<LinearLayout
            android:id="@+id/camera_controls"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@android:color/background_light"
            android:elevation="2dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/camera">

			<TextView
				android:id="@+id/room_prompt"
				android:layout_width="250dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:gravity="center"
				android:paddingStart="8dp"
				android:text="@string/current_room"
				android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

			<Spinner
				android:id="@+id/camera_selector"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1" />
		</LinearLayout>

		<TextView
			android:id="@+id/camera_title"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="16dp"
			android:layout_marginStart="16dp"
			android:layout_marginTop="16dp"
			android:text="@string/cam_title"
			android:textAppearance="@style/TextAppearance.AppCompat.Display1"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/camera_controls"
			tools:layout_editor_absoluteY="290dp" />

		<TextView
			android:id="@+id/camera_info"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="16dp"
			android:layout_marginStart="16dp"
			android:layout_marginTop="16dp"
			android:text="@string/cam_info"
			android:textAppearance="@style/TextAppearance.AppCompat.Body1"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/camera_title"
			tools:layout_editor_absoluteX="16dp"
			tools:layout_editor_absoluteY="300dp" />

		<ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/camera"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.DrawerLayout>
